k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-auth-flapi-service
  namespace: staging-auth-flapi
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: staging-auth-flapi
