k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-auth-flapi-ingress
  namespace: staging-auth-flapi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - staging.auth.flapi.org
      secretName: staging-auth-flapi-tls  
  rules:
    - host: staging.auth.flapi.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: staging-auth-flapi-service
              port:
                number: 8080
